@@ -1,3 +1,9 @@
+2012-04-18  Andrey Kotlarski  <m00naticus@gmail.com>
+
+	* w3m-lnum.el (w3m-with-lnum, w3m-lnum-universal-dispatch):
+	Explicitly redraw mode line.
+	(w3m-lnum-visit): Fix prompt; add --insecure option to Curl.
+
 2012-04-17  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-create-page): Add a filter for Google Analytics tracking
